--- a/a3/views/css/styles.css
+++ b/a3/views/css/styles.css
@@ -22,3 +22,27 @@ h3 {
     top: -1em;
 }
 
+.form-button {
+    background: none repeat scroll 0 0 #333;
+    border: medium none;
+    border-radius: 10px;
+    color: #ddd;
+    display: block;
+    left: 20px;
+    padding: 5px 10px;
+    position: relative;
+}
+
+.form-button:hover {
+    background: none repeat scroll 0 0 #ddd;
+    border: 1px solid #333;
+    color: #333;
+    padding: 4px 9px;
+}
+
+.form-button:active {
+    -ms-transform: translate(1px,1px);
+    -webkit-transform: translate(1px,1px);
+    transform: translate(1px,1px);
+}
+
